# translatify

./: .lang.txt.un~  Cargo.toml  readme.md
src/: langs.rs  main.rs
